<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_mainActivity"
        android:layout_width="115dp"
        android:layout_height="177dp"
        android:background="@drawable/millionaire_image_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2_mainActivity"
        android:layout_width="178dp"
        android:layout_height="111dp"
        android:background="@drawable/millionaire_image_cash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_newGame"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button"
        android:text="@string/NewGame"
        android:textColor="@color/colorTextButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_category"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_below="@+id/btn_newGame"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button"
        android:text="@string/Categories"
        android:textColor="@color/colorTextButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_newGame" />

    <Button
        android:id="@+id/btn_options"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_button"
        android:text="@string/Options"
        android:textColor="@color/colorTextButton"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2_mainActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_category" />

</androidx.constraintlayout.widget.ConstraintLayout>