<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".AddCategory">

    <ImageView
        android:id="@+id/imageViewBackground_addCategory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/background_white_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView1_addCategory"
        android:layout_width="115dp"
        android:layout_height="177dp"
        android:background="@drawable/millionaire_image_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_addCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/AddCategory"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintTop_toTopOf="@+id/imageViewBackground_addCategory" />

    <Button
        android:id="@+id/btnAdd_addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/Add"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintStart_toStartOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintTop_toBottomOf="@+id/imageViewBackground_addCategory" />

    <Button
        android:id="@+id/btnSelect_addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:text="@string/SelectFromGallery"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnAdd_addCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnSelectFromImages_addCategory" />

    <Button
        android:id="@+id/btnSelectFromImages_addCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/Images"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/btnSelect_addCategory"
        app:layout_constraintEnd_toStartOf="@+id/btnSelect_addCategory"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSelect_addCategory" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSelectFromImages_addCategory"
        app:layout_constraintEnd_toEndOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintStart_toStartOf="@+id/imageViewBackground_addCategory"
        app:layout_constraintTop_toBottomOf="@+id/editText_addCategory">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <ImageView
                android:id="@+id/imageView_addCategory_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/person_another" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Image"
                app:layout_constraintBottom_toTopOf="@+id/imageView_addCategory_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_addCategory_icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/image_none" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Icon"
                app:layout_constraintBottom_toTopOf="@+id/imageView_addCategory_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>