<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ChangeQuestionCount">

    <Button
        android:id="@+id/btnN6"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="6"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnN5"
        app:layout_constraintTop_toTopOf="@+id/btnN5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="115dp"
        android:layout_height="177dp"
        android:background="@drawable/millionaire_image_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="178dp"
        android:layout_height="111dp"
        android:background="@drawable/millionaire_image_cash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ChooseQuestCount"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_saveQCounts"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_button"
        android:text="@string/Save"
        android:textColor="@color/colorTextButton"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_maxCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/MaxQuestCount"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumber" />

    <Button
        android:id="@+id/btnN1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="1"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toStartOf="@+id/btnN2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnN2" />

    <Button
        android:id="@+id/btnN2"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="2"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toTopOf="@+id/btnN5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_maxCount" />

    <Button
        android:id="@+id/btnN3"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="3"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnN2"
        app:layout_constraintTop_toTopOf="@+id/btnN2" />

    <Button
        android:id="@+id/btnN4"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="4"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toStartOf="@+id/btnN5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnN5" />

    <Button
        android:id="@+id/btnN5"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="5"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toTopOf="@+id/btnN8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnN2" />

    <Button
        android:id="@+id/btnN7"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="7"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toStartOf="@+id/btnN8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnN8" />

    <Button
        android:id="@+id/btnN8"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="8"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toTopOf="@+id/btnN0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnN5" />

    <Button
        android:id="@+id/btnN9"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="9"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnN8"
        app:layout_constraintTop_toTopOf="@+id/btnN8" />

    <Button
        android:id="@+id/btnN0"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="0"
        android:textColor="@color/colorTextButton"
        app:layout_constraintBottom_toTopOf="@+id/btn_saveQCounts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnN8" />

    <TextView
        android:id="@+id/tvNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="0"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btnBackspace"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnN0"
        app:layout_constraintTop_toTopOf="@+id/btnN0" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:text="@string/Clear"
        android:textColor="@color/colorTextButton"
        app:layout_constraintEnd_toStartOf="@+id/btnN0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnN0" />

</androidx.constraintlayout.widget.ConstraintLayout>